--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "ESNext",
+    "types": ["jest"],
+    "module": "CommonJS",
     "outDir": "dist",
     "rootDir": "./",
     "strict": true,
