--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,43 @@
 {
-    "manifest_version": 3,
-    "name": "Tab Vault",
-    "version": "0.1",
-    "description": "Save and restore selected tabs in multiple formats.",
-    "permissions": ["tabs", "downloads", "storage"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "action": {
-      "default_popup": "popup/popup.html",
-      "default_icon": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
-      }
+  "manifest_version": 3,
+  "name": "Tab Vault",
+  "version": "0.1",
+  "description": "Save and restore selected tabs in multiple formats.",
+  "permissions": [
+    "tabs",
+    "downloads",
+    "storage"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup/popup.html",
+    "default_icon": {
+      "16": "icons/tab-vault-16.png",
+      "48": "icons/tab-vault-48.png",
+      "96": "icons/tab-vault-96.png",
+      "192": "icons/tab-vault-192.png"
     }
-  }
-  
+  },
+  "icons": {
+    "16": "icons/tab-vault-16.png",
+    "48": "icons/tab-vault-48.png",
+    "96": "icons/tab-vault-96.png",
+    "192": "icons/tab-vault-192.png"
+  },
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*"
+  ],
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": [
+        "content.js"
+      ]
+    }
+  ]
+}
