--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "Tab Vault is a Chrome extension that allows users to select and save open tabs in JSON, Markdown, and HTML formats, and reload them later. Built with TypeScript, it provides a simple interface for managing tab sessions efficiently.",
   "main": "background.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/chrome": "^0.0.300",
     "@types/jest": "^29.5.14",
+    "copy-webpack-plugin": "^12.0.2",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "ts-loader": "^9.5.2",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   }
 }
