updated versioning of build

--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,9 @@
 {
   "manifest_version": 3,
   "name": "Tab Vault",
-  "version": "0.1",
+  "version": "0.2",
   "description": "Save and restore selected tabs in multiple formats.",
-  "permissions": [
-    "tabs",
-    "downloads",
-    "storage"
-  ],
+  "permissions": ["tabs", "downloads", "storage"],
   "background": {
     "service_worker": "background.js"
   },
@@ -26,18 +22,11 @@
     "96": "icons/tab-vault-96.png",
     "192": "icons/tab-vault-192.png"
   },
-  "host_permissions": [
-    "http://*/*",
-    "https://*/*"
-  ],
+  "host_permissions": ["http://*/*", "https://*/*"],
   "content_scripts": [
     {
-      "matches": [
-        "<all_urls>"
-      ],
-      "js": [
-        "content.js"
-      ]
+      "matches": ["<all_urls>"],
+      "js": ["content.js"]
     }
   ]
 }
