--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES6",
+    "lib": ["es2017", "dom"],
     "types": ["jest","chrome"],
     "module": "esnext",
     "moduleResolution": "node",
